@startuml
'https://plantuml.com/class-diagram

package model {
class Student {
    - studentId: int
    - lastName: String
    - firstName: String
    - schoolPreferences: ArrayList<School>

    + Student(...)
    + addSchoolToPref(...): void
}

class School {
    - schoolName: String
    - schoolCapacity: int
    - studentPreferences: List<Student>
    - studentIdPreferences: List<Integer>

    + School(...)
    + addStudentToPref(...): void
    + addStudentIdToPref(...): void
    + studentIdToStudentObject(...): void
}

class Utils {
    - DATA_FILE_PATH: String
    + DELIMITER: String
    + getStudentsFromFile(...): HashSet<Student>
    + getSchoolsFromFile(...): HashSet<School>
    + createJsonArray(...): JsonArray
    + setSchoolPref(...): void
    + setStudentPrefForEachSchool(...): void
    + printResults(...): void
    + printProgramUsage(): void
}

class Association {
  - DEBUG: boolean
  + matchWithSchoolBidding(...):
  - isSchoolAdmissionListsAreGood(...):
  + matchWithStudentBidding(...):
  - getBestProposition(...): School
  - initializeStudentBidding(...):
  - printAStudentSet(...): void
  - printAMap(...): void
}

School "*" <..> "*" Student
'School "0..1" -- "0..*" Student
Utils ..>  Student
Utils ..>  School

Association ..>  Student
Association ..>  School

main ..> Association
main ..> Utils
}


@enduml